editing color of background and added hover effect in scrollbar.issue#43

--- a/style.css
+++ b/style.css
@@ -6,21 +6,24 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 15px;
-  height: 12px;
+  width: 20px;
+  background: #03c75e;;
+
 }
 
 ::-webkit-scrollbar-track {
-  background-image: linear-gradient(to right top, #008793, #00bf72);
+ box-shadow: inset 0 0 5px black; 
 }
 
 ::-webkit-scrollbar-thumb {
-  background: rgb(208, 211, 202);
-  border-radius: 10px;
+  background: rgb(160, 155, 155);
+  border-radius: 50px;
+  box-shadow: 0 5px 10px black;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #6e6f6d;
+  background: #309f64;
+  box-shadow: 0 10px 10px black;
 }
 
 .navbar-brand {
